traefik/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  ports:
    - name: whoami
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: whoami
