traefik/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  # namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.thepi.cloud`)
    kind: Rule
    services:
      - name: api@internal
        kind: TraefikService
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  # namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`whoami.thepi.cloud`)
    kind: Rule
    services:
      - name: whoami
        port: 80
